<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.artillexstudios</groupId>
        <artifactId>AxCrates</artifactId>
        <version>1.0.0-beta5</version>
    </parent>

    <artifactId>common</artifactId>
    <packaging>jar</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <repositories>
        <repository>
            <id>Artillex-Studios</id>
            <url>https://repo.artillex-studios.com/releases/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.artillexstudios.axapi</groupId>
            <artifactId>axapi</artifactId>
            <version>1.4.840</version>
            <scope>compile</scope>
            <classifier>all</classifier>
        </dependency>
    </dependencies>

</project>